--- a/custom.css
+++ b/custom.css
@@ -1,7 +1,7 @@
 header{
   background: no-repeat center center;
   background-size: cover;
-  color: white;
+  color: #FEFEFE;
 }
 .color-overlay{
   background-color: rgba(0, 0, 0, 0.4);
