--- a/custom.css
+++ b/custom.css
@@ -11,6 +11,26 @@ header{
   max-width: 750px;
   background-color: #4E3622;
 }
+.navvy{
+  background-color: #4E3622;
+}
+.navbar-light,
+.navbar-toggler{
+  border-color: #DAD3C9;
+  color: #DAD3C9;
+}
+.navbar-light,
+.navbar-toggler:hover{
+  border-color: #4E3622;
+  color: #4E3622;
+}
+.btn-outline-dark{
+  background-color: #AAA39B;
+}
+.btn-outline-dark:hover{
+  background-color: #4E3622;
+  color: #DAD3C9;
+}
 footer{
   background-color: #4E3622;
 }
