--- a/custom.css
+++ b/custom.css
@@ -19,7 +19,7 @@ body{
 }
 
 .navvy{
-  background-color: #4E3622;
+  background-color: ##FEFEFE;
 }
 
 .navbar-light,
@@ -45,6 +45,7 @@ body{
 
 footer{
   background-color: #4E3622;
+  display: block;
 }
 
 footer a{
