--- a/custom.css
+++ b/custom.css
@@ -44,7 +44,7 @@ body{
 }
 
 footer{
-  background-color: #4E3622;
+  background-color: #dfdfdf;
   display: flex;
 }
 
@@ -53,7 +53,7 @@ footer a{
 }
 
 footer a:hover{
-    color: #dfdfdf
+    color: #4E3622;
 }
 
 @media (max-width:768.98px){
