--- a/custom.css
+++ b/custom.css
@@ -22,6 +22,11 @@ body{
   background-color: #DAD3C9;
 }
 
+img.float-sm-none float-md-end{
+  border: 15px solid #4E3622;
+  border-radius: 174px;
+}
+
 .navvy{
   background-color: ##FEFEFE;
 }
@@ -40,6 +45,7 @@ body{
 
 .btn-outline-dark{
   background-color: #AAA39B;
+  display: flex;
 }
 
 .btn-outline-dark:hover{
