--- a/custom.css
+++ b/custom.css
@@ -22,7 +22,7 @@ body{
   background-color: #DAD3C9;
 }
 
-img.profile.png{
+.profile.png{
   border: 15px solid #4E3622;
   border-radius: 174px;
 }
