--- a/custom.css
+++ b/custom.css
@@ -18,7 +18,7 @@ header{
   background-color: #DAD3C9;
 }
 
-img profile.png{
+.img profile.png{
   border: 15px solid #4E3622;
   border-radius: 174px;
 }
@@ -30,6 +30,7 @@ a.nav-link{
 a.nav-link:hover{
   color: #4E3622;
 }
+
 .navvy{
   background-color: ##FEFEFE;
 }
@@ -54,6 +55,20 @@ a.nav-link:hover{
 .btn-outline-dark:hover{
   background-color: #4E3622;
   color: #DAD3C9;
+}
+
+.btn-bd-primary {
+  --bs-btn-font-weight: 600;
+  --bs-btn-color: var(--bs-white);
+  --bs-btn-bg: var(--bd-#4E3622-bg);
+  --bs-btn-border-color: var(--bd-#4E3622-bg);
+  --bs-btn-hover-color: var(--bs-white);
+  --bs-btn-hover-bg: #{shade-color($bd-#4E3622, 10%)};
+  --bs-btn-hover-border-color: #{shade-color($bd-#4E3622, 10%)};
+  --bs-btn-focus-shadow-rgb: var(--bd-#4E3622-rgb);
+  --bs-btn-active-color: var(--bs-btn-hover-color);
+  --bs-btn-active-bg: #{shade-color($bd-#4E3622, 20%)};
+  --bs-btn-active-border-color: #{shade-color($bd-#4E3622, 20%)};
 }
 
 footer{
